1.8.4: Colony Research now also increases gold generation up to 1 additional gold for each colony. Fixed bug with custom ship build time estimation. Increased gold generation overall. Fixed UI issue with list items taking up too much space.

--- a/public/css/jquery.ui.adjust.css
+++ b/public/css/jquery.ui.adjust.css
@@ -33,6 +33,7 @@ body *:not(.ui-selectmenu-menu) .ui-menu .ui-menu-item {
     float: left;
     clear: left;
     width: 100%;
+    list-style-image: none;
 }
 
 .ui-menu .ui-menu-item a {
